<resources>
    <string name="app_name">Project_kelompok_delapan</string>
    <string name="action_settings">Settings</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="submit">Submit</string>
    <string name="merk_barang">Merk Barang</string>
    <string name="nama_barang">Nama Barang</string>
</resources>
