<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tambah_data" />

    <EditText
        android:id="@+id/et_namabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_barang"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_merkbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/merk_barang"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_hargabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/harga_barang"
        android:inputType="number" />
    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>